--- a/contact.html
+++ b/contact.html
@@ -142,13 +142,14 @@
                     <div class="col-12 mt-3 text-center">
                         <p class="mb-3">Or reach us instantly on:</p>
                         <div class="d-grid gap-2 d-md-flex justify-content-center">
-                            <a href="https://wa.me/919037762644" target="_blank" class="btn btn-success mb-2 mb-md-0 me-md-2">
+                            <a href="https://wa.me/918129543197" target="_blank" class="btn btn-success mb-2 mb-md-0 me-md-2">
                                 <i class="fab fa-whatsapp me-1"></i> WhatsApp Enquiry
                             </a>
-                            <a href="https://www.facebook.com/StepUpTony/?rdid=DnscsibP2vviSS0p" target="_blank" class="btn btn-primary">
+                            <a href="https://www.facebook.com/StarMagnetOfficial?rdid=9iM4TjM2xFfksJee&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1BgV7Zy5fY%2F" target="_blank" class="btn btn-primary">
                                 <i class="fab fa-facebook-f me-1"></i> Facebook Message
                             </a>
                         </div>
+
                     </div>
                 </div>
             </form>
@@ -173,48 +174,64 @@
     <div class="container-fluid bg-primary text-secondary p-5">
         <div class="row g-5">
             <div class="col-12 text-center">
-                <h1 class="display-5 mb-4">Stay Updated!!!</h1>
+                <h1 class="display-5 mb-4">Stay Update!!!</h1>
                 <form class="mx-auto" style="max-width: 600px;">
                     <div class="input-group">
-                        <input type="email" class="form-control border-white p-3" placeholder="Your Email">
-                        <button class="btn btn-dark px-4" type="submit">Sign Up</button>
+                        <input type="text" class="form-control border-white p-3" placeholder="Your Email">
+                        <button class="btn btn-dark px-4">Sign Up</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
-
     <div class="container-fluid bg-dark text-secondary p-5">
         <div class="row g-5">
-            <div class="col-lg-3 col-md-6">
+            <!-- <div class="col-lg-3 col-md-6">
                 <h3 class="end-white-text mb-4">Quick Links</h3>
-                <div class="d-flex flex-column">
-                    <a class="text-secondary mb-2" href="#">Home</a>
-                    <a class="text-secondary mb-2" href="about.html">About Us</a>
-                    <a class="text-secondary mb-2" href="service.html">Our Services</a>
-                    <a class="text-secondary" href="contact.html">Contact Us</a>
+                <div class="d-flex flex-column justify-content-start">
+                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Home</a>
+                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>About Us</a>
+                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Our Services</a>
+                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Latest Blog Post</a>
+                    <a class="text-secondary" href="#"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Contact Us</a>
+                </div>
+            </div> -->
+            <div class="col-lg-3 col-md-6">
+                <h3 class="end-white-text mb-4">Popular Links</h3>
+                <div class="d-flex flex-column justify-content-start">
+                    <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right end-white-arrow  me-2"></i>Home</a>
+                    <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right end-white-arrow me-2"></i>About Us</a>
+                    <a class="text-secondary mb-2" href="service.html"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Our Services</a>
+                    <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right end-white-arrow me-2"></i>Contact Us</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6">
-                <h3 class="end-white-text mb-4">Contact</h3>
+                <h3 class="end-white-text mb-4">Get In Touch</h3>
                 <p class="mb-2"><i class="bi bi-geo-alt me-2"></i>Kochi, Kerala, India</p>
-                <p class="mb-0"><i class="bi bi-telephone me-2"></i>+91 903 776 2644</p>
-                <p class="mb-0"><i class="bi bi-telephone me-2"></i>+91 884 898 6556</p>
+                <p class="mb-0"><i class="bi bi-telephone me-2"></i><a href="tel:+918129543197" class="end-white-arrow">+91 812 954 3197</a></p>
+                <p class="mb-0"><i class="bi bi-telephone me-2"></i><a href="tel:+919074717219" class="end-white-arrow">+91 907 471 7219</a></p>
+
             </div>
-            <div class="col-lg-3 col-md-6">
-                <h3 class="end-white-text mb-4">Follow Us</h3>
-                <div class="d-flex">
-                    <a class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-primary btn-square me-2" href="#"><i class="fab fa-instagram"></i></a>
-                    <a class="btn btn-primary btn-square" href="#"><i class="fab fa-linkedin-in"></i></a>
-                </div>
-            </div>
+           <div class="col-lg-3 col-md-6">
+    <h3 class="end-white-text mb-4">Follow Us</h3>
+    <div class="d-flex">
+        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="https://www.instagram.com/starmagnetofficial?igsh=MWw4NG9zZ2dvenZ0dQ%3D%3D" target="_blank">
+            <i class="fab fa-instagram fw-normal"></i>
+        </a>
+        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="https://www.facebook.com/StarMagnetOfficial?rdid=9iM4TjM2xFfksJee&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1BgV7Zy5fY%2F" target="_blank">
+            <i class="fab fa-facebook-f fw-normal"></i>
+        </a>
+        <a class="btn btn-lg btn-primary btn-lg-square rounded-circle" href="https://wa.me/918129543197" target="_blank">
+            <i class="fab fa-whatsapp fw-normal"></i>
+        </a>
+    </div>
+</div>
+
         </div>
     </div>
-
-    <div class="container-fluid bg-dark text-secondary text-center py-4">
-        <p class="mb-0">&copy; 2025 Star Magnet. All Rights Reserved. Designed by <a href="https://htmlcodex.com" class="text-secondary">Stepx International</a></p>
-    </div>
+    <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
+ <p class="mb-0">&copy; 2025 Star Magnet. All Rights Reserved. Designed by <a href="https://htmlcodex.com" class="text-secondary">Stepx International</a></p>    </div>
+    <!-- Footer End -->
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
