--- a/about.html
+++ b/about.html
@@ -219,21 +219,26 @@
     <!-- Satisfied Parents -->
     <div class="col-md-6 mb-4">
         <div class="p-4 rounded shadow text-center text-white" style="background: linear-gradient(90deg, #e6f0ff, #f2f7ff, #fafcff);">
-            <h2 class="display-5 fw-bold mb-2 d-inline" data-number="1000">0</h2>
-            <span style="font-size: 2.5rem; font-weight: 900; vertical-align: top; margin-left: 5px;">+</span>
-            <p class="mb-0 text-uppercase fw-semibold">Satisfied Parents</p>
+            <div style="display: inline-flex; align-items: flex-start; justify-content: center;">
+                <h2 class="display-5 fw-bold mb-2" data-number="1000" style="margin: 0;">0</h2>
+                <span style="font-size: 2.5rem; font-weight: 900; margin-left: 5px; line-height: 1;">+</span>
+            </div>
+            <p class="mb-0 text-uppercase fw-semibold mt-2">Satisfied Parents</p>
         </div>
     </div>
     <!-- Transformed Students -->
     <div class="col-md-6 mb-4">
         <div class="p-4 rounded shadow text-center text-white" style="background: linear-gradient(90deg, #e6f0ff, #f2f7ff, #fafcff);">
-            <h2 class="display-5 fw-bold mb-2 d-inline" data-number="1000">0</h2>
-            <span style="font-size: 2.5rem; font-weight: 900; vertical-align: top; margin-left: 5px;">+</span>
-            <p class="mb-0 text-uppercase fw-semibold">Transformed Students</p>
+            <div style="display: inline-flex; align-items: flex-start; justify-content: center;">
+                <h2 class="display-5 fw-bold mb-2" data-number="1000" style="margin: 0;">0</h2>
+                <span style="font-size: 2.5rem; font-weight: 900; margin-left: 5px; line-height: 1;">+</span>
+            </div>
+            <p class="mb-0 text-uppercase fw-semibold mt-2">Transformed Students</p>
         </div>
     </div>
 </div>
 <!-- Counter Section End -->
+
 
 
     <!-- About End -->
