--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                  class="img-fluid rounded-circle"
                  style="width: 100%; height: 100%; object-fit: cover; background-color: white;">
           </div>
-          <h4 class="mt-3 gradient-text">Jeena Johnson</h4>
+          <h4 class="mt-3 gradient-text">Jeena Tony</h4>
           <p class="mb-0 fw-bold text-dark">Chief Mentor</p>
         <p class="text-muted">Student Transformation Programme</p>
 
