--- a/about.html
+++ b/about.html
@@ -255,7 +255,7 @@
   <div class="row justify-content-center mb-4">
     <div class="col-md-4">
       <div class="team-item position-relative overflow-hidden">
-        <img class="img-fluid w-100" src="img/team-2.jpeg" alt="">
+        <img class="img-fluid w-100" src="img/jeeku_about.jpeg" alt="">
         <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
           <h3 class="text-white">Jeena Tony</h3>
           <p class="text-white text-uppercase mb-0">Head of Children Life Transformation</p>
